--- a/requirements.txt
+++ b/requirements.txt
@@ -6,10 +6,12 @@ scipy>=1.10.0
 
 # Machine Learning & NLP
 scikit-learn>=1.3.0
-sentence-transformers>=2.2.0
-transformers>=4.30.0
-torch>=2.0.0
-spacy>=3.6.0
+# sentence-transformers>=2.2.0  # Heavy dependency - optional
+# transformers>=4.30.0  # Heavy dependency - optional  
+# torch>=2.0.0  # Heavy dependency - optional
+# spacy>=3.6.0  # Windows incompatible - using textblob + vader instead
+textblob>=0.17.0
+vaderSentiment>=3.3.2
 nltk>=3.8.0
 
 # Financial Data & APIs
@@ -34,7 +36,7 @@ sqlalchemy>=2.0.0
 
 # Technical Analysis
 ta>=0.10.0
-# talib>=0.4.25  # Commented out - use ta library instead for Windows compatibility
+# talib>=0.4.25  # Windows incompatible - using ta instead
 vectorbt>=0.25.0
 
 # Monte Carlo & Risk
@@ -64,3 +66,7 @@ pytest-asyncio>=0.21.0
 black>=23.0.0
 flake8>=6.0.0
 mypy>=1.4.0
+
+# Windows-compatible alternatives
+textblob>=0.17.0
+vaderSentiment>=3.3.2
