--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 streamlit==1.37.0
 altair==5.5.0
 python-dotenv==1.0.1
-pandas==2.2.2
-numpy==1.26.4
+pandas>=2.2.3
+numpy>=1.26.4
 pyarrow==12.0.1
 requests==2.31.0
 scipy==1.11.4
