--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,9 @@ altair==5.5.0
 python-dotenv==1.0.1
 pandas>=2.2.3
 numpy>=1.26.4
-pyarrow==12.0.1
+pyarrow>=15.0.0
 requests==2.31.0
-scipy==1.11.4
+scipy>=1.11.4
 ta==0.11.0
 plotly==5.23.0
 
