--- a/config/strategies.yaml
+++ b/config/strategies.yaml
@@ -2,109 +2,89 @@
 # Define different trading strategies and their parameters
 
 strategies:
-  momentum:
-    name: "Momentum Strategy"
-    description: "Buy assets with strong upward momentum, sell those with downward momentum"
-    enabled: true
-    weight: 0.3
-    
-    parameters:
-      lookback_period: 20  # Days to look back for momentum calculation
-      momentum_threshold: 0.05  # Minimum momentum to trigger signal
-      volume_threshold: 1.5  # Minimum volume multiplier vs average
-      rsi_oversold: 30
-      rsi_overbought: 70
-      
-    signals:
-      - name: "price_momentum"
-        weight: 0.4
-        description: "Price change over lookback period"
-      - name: "volume_momentum"
-        weight: 0.3
-        description: "Volume increase vs average"
-      - name: "rsi_divergence"
-        weight: 0.3
-        description: "RSI divergence from price"
-
-  mean_reversion:
-    name: "Mean Reversion Strategy"
-    description: "Buy oversold assets, sell overbought assets"
+  btc_ny_session:
+    name: "NY Session Strategy"
+    description: "Buy at NY open (9:30 AM ET) and sell at NY close (4:30 PM ET)"
     enabled: true
     weight: 0.25
     
     parameters:
-      bollinger_period: 20
-      bollinger_std: 2
-      rsi_oversold: 25
-      rsi_overbought: 75
-      z_score_threshold: 2
+      ny_open_hour: 9
+      ny_open_minute: 30
+      ny_close_hour: 16
+      ny_close_minute: 30
+      stop_loss_pct: 0.05  # 5% stop loss
+      take_profit_pct: 0.05  # 5% take profit
+      confidence: 0.80
       
     signals:
-      - name: "bollinger_bands"
-        weight: 0.4
-        description: "Price relative to Bollinger Bands"
-      - name: "rsi_extreme"
-        weight: 0.3
-        description: "RSI in extreme territory"
-      - name: "z_score"
-        weight: 0.3
-        description: "Price z-score vs moving average"
+      - name: "ny_open_buy"
+        weight: 0.5
+        description: "Buy signal at NY market open"
+      - name: "ny_close_sell"
+        weight: 0.5
+        description: "Sell signal at NY market close"
 
-  sentiment:
-    name: "Sentiment Strategy"
-    description: "Trade based on news and social media sentiment"
+  liquidity_sweep_reversal:
+    name: "Liquidity Sweep Reversal"
+    description: "Detect liquidity hunts beyond swing points with volume confirmation, trade reversal back inside range"
     enabled: true
-    weight: 0.2
+    weight: 0.25
     
     parameters:
-      sentiment_threshold: 0.3
-      news_weight: 0.6
-      social_weight: 0.4
-      min_articles: 3
-      sentiment_lookback: 7  # Days
+      swing_lookback: 20
+      volume_multiplier: 1.5
+      body_size_multiplier: 0.8
+      stop_buffer: 0.005
+      confidence: 0.75
       
     signals:
-      - name: "news_sentiment"
-        weight: 0.6
-        description: "News article sentiment analysis"
-      - name: "social_sentiment"
-        weight: 0.4
-        description: "Reddit/Twitter sentiment analysis"
+      - name: "wick_above_swing_short"
+        weight: 0.5
+        description: "Short signal when wick exceeds swing high with volume"
+      - name: "wick_below_swing_long"
+        weight: 0.5
+        description: "Long signal when wick exceeds swing low with volume"
 
-  arbitrage:
-    name: "Arbitrage Strategy"
-    description: "Exploit price differences between exchanges"
-    enabled: false  # Requires multiple exchange APIs
-    weight: 0.1
+  volume_weighted_trend_continuation:
+    name: "Volume Weighted Trend Continuation"
+    description: "Trade trend continuation only when volume confirms real participation using linear regression slope"
+    enabled: true
+    weight: 0.25
     
     parameters:
-      min_spread: 0.01  # Minimum 1% spread
-      max_position: 0.05  # Maximum 5% of portfolio
-      execution_delay: 5  # Seconds to execute trade
+      trend_lookback: 20
+      volume_lookback: 20
+      slope_threshold: 0.0001
+      volume_multiplier: 1.2
+      confidence: 0.70
       
     signals:
-      - name: "price_spread"
+      - name: "uptrend_volume_confirmation"
+        weight: 0.5
+        description: "Long signal on uptrend with volume confirmation"
+      - name: "downtrend_volume_confirmation"
+        weight: 0.5
+        description: "Short signal on downtrend with volume confirmation"
+
+  volatility_expansion_breakout:
+    name: "Volatility Expansion Breakout"
+    description: "Detect compression periods, wait for expansion breakout with volume, trade momentum continuation"
+    enabled: true
+    weight: 0.25
+    
+    parameters:
+      atr_period: 14
+      compression_percentile: 30
+      body_multiplier: 1.5
+      volume_multiplier: 1.3
+      trailing_atr_multiplier: 0.5
+      confidence: 0.80
+      
+    signals:
+      - name: "compression_breakout_long"
         weight: 1.0
-        description: "Price difference between exchanges"
-
-  portfolio_optimization:
-    name: "Portfolio Optimization"
-    description: "Dynamic portfolio allocation based on risk-return optimization"
-    enabled: true
-    weight: 0.15
-    
-    parameters:
-      risk_free_rate: 0.02  # 2% annual risk-free rate
-      target_volatility: 0.15  # 15% target portfolio volatility
-      rebalance_threshold: 0.05  # 5% deviation triggers rebalance
-      max_weight: 0.2  # Maximum 20% in any single asset
-      min_weight: 0.01  # Minimum 1% in any asset
-      
-    optimization_method: "mean_variance"  # mean_variance, black_litterman, risk_parity
-    constraints:
-      - "long_only"  # No short selling
-      - "sector_limits"  # Limit exposure to any single sector
-      - "correlation_limits"  # Limit highly correlated positions
+        description: "Long signal on volatility expansion breakout"
 
 # Risk Management Rules
 risk_management:
